# serialPortAssistant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  mainwindow.cc  mainwindow.hh  mainwindow.ui  serialPortAssistant.pro
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml
resource/: res.qrc
